Add clinic images and integrate them into website
- Added 5 AYURPIC images to showcase clinic facilities and treatments
- Integrated images into hero section, services, and gallery
- Correctly assigned AYURPIC4 to Kansya Thali Massage service
- Correctly assigned AYURPIC3 to Cupping Therapy service
- Added new gallery section to showcase all clinic images
- Removed doctor profile photo as requested
- Created image copies with expected filenames for website compatibility

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
                     </div>
                 </div>
                 <div class="hero-visual">
+                    <!-- Hero background image -->
+                    <div class="hero-image">
+                        <img src="images/hero-bg.jpg" alt="AAYURCURE Ayurvedic Clinic" class="hero-bg">
+                    </div>
+                    <!-- Fallback SVG if image doesn't load -->
                     <svg class="hero-svg" viewBox="0 0 200 200" aria-hidden="true">
                         <circle cx="100" cy="100" r="80" fill="#87A96B" opacity="0.1"/>
                         <path d="M60 100 Q100 60 140 100 Q100 140 60 100" fill="#87A96B" opacity="0.3"/>
@@ -100,6 +105,9 @@
                 <h2 class="section-title">Our Services</h2>
                 <div class="services-grid">
                     <div class="service-card">
+                        <div class="service-image">
+                            <img src="images/AYURPIC4.jpg" alt="Kansya Thali Massage Treatment" class="service-img">
+                        </div>
                         <div class="service-icon">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M12 2L13.09 8.26L19 9L13.09 9.74L12 16L10.91 9.74L5 9L10.91 8.26L12 2Z"/>
@@ -120,6 +128,9 @@
                     </div>
                     
                     <div class="service-card">
+                        <div class="service-image">
+                            <img src="images/AYURPIC5.jpg" alt="Hair and Skin Care Treatment" class="service-img">
+                        </div>
                         <div class="service-icon">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 7.5V9M15 16V14L21 14.5V16M15 20V22L21 21.5V20M3 9V7L9 7.5V9M9 16V14L3 14.5V16M9 20V22L3 21.5V20"/>
@@ -142,6 +153,9 @@
                     </div>
                     
                     <div class="service-card">
+                        <div class="service-image">
+                            <img src="images/AYURPIC3.jpg" alt="Cupping Therapy Treatment" class="service-img">
+                        </div>
                         <div class="service-icon">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <circle cx="12" cy="12" r="10"/>
@@ -230,6 +244,46 @@
                         <p class="doctor-title">Registered Ayurvedic Practitioner</p>
                         <p class="registration">Registration: GBI – 14565</p>
                         <p>Dr. Asha Tandel brings years of experience in traditional Ayurvedic medicine, specializing in Panchkarma therapies, pain management, and holistic wellness solutions. Her approach combines ancient wisdom with contemporary understanding to provide effective, personalized treatments.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Gallery Section -->
+        <section id="gallery" class="gallery">
+            <div class="container">
+                <h2 class="section-title">Our Clinic Gallery</h2>
+                <p class="gallery-description">Take a glimpse inside our authentic Ayurvedic clinic and treatment facilities</p>
+                <div class="gallery-grid">
+                    <div class="gallery-item">
+                        <img src="images/AYURPIC1.jpg" alt="AAYURCURE Clinic Interior" class="gallery-img">
+                        <div class="gallery-overlay">
+                            <h4>Clinic Interior</h4>
+                        </div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/AYURPIC2.jpg" alt="Ayurvedic Treatment Room" class="gallery-img">
+                        <div class="gallery-overlay">
+                            <h4>Treatment Room</h4>
+                        </div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/AYURPIC3.jpg" alt="Traditional Ayurvedic Massage Therapy" class="gallery-img">
+                        <div class="gallery-overlay">
+                            <h4>Massage Therapy</h4>
+                        </div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/AYURPIC4.jpg" alt="Panchkarma Treatment Setup" class="gallery-img">
+                        <div class="gallery-overlay">
+                            <h4>Panchkarma Setup</h4>
+                        </div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/AYURPIC5.jpg" alt="Ayurvedic Wellness Facility" class="gallery-img">
+                        <div class="gallery-overlay">
+                            <h4>Wellness Facility</h4>
+                        </div>
                     </div>
                 </div>
             </div>
