Add new treatment images and update service assignments
- Added AYURPIC6.jpg for Viddhkarma (Needle Therapy) service
- Added AYURPIC7.jpg for Pain Management & Panchkarma service
- Removed clinic gallery section to keep website focused
- All service cards now have corresponding treatment images
- Updated image assignments to match correct treatments

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                     </div>
                     
                     <div class="service-card">
+                        <div class="service-image">
+                            <img src="images/AYURPIC7.jpg" alt="Pain Management & Panchkarma Treatment" class="service-img">
+                        </div>
                         <div class="service-icon">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M9 12L11 14L15 10M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"/>
@@ -141,6 +144,9 @@
                     </div>
                     
                     <div class="service-card">
+                        <div class="service-image">
+                            <img src="images/AYURPIC6.jpg" alt="Viddhkarma Needle Therapy Treatment" class="service-img">
+                        </div>
                         <div class="service-icon">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M12 2L2 7L12 12L22 7L12 2Z"/>
@@ -244,46 +250,6 @@
                         <p class="doctor-title">Registered Ayurvedic Practitioner</p>
                         <p class="registration">Registration: GBI – 14565</p>
                         <p>Dr. Asha Tandel brings years of experience in traditional Ayurvedic medicine, specializing in Panchkarma therapies, pain management, and holistic wellness solutions. Her approach combines ancient wisdom with contemporary understanding to provide effective, personalized treatments.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Gallery Section -->
-        <section id="gallery" class="gallery">
-            <div class="container">
-                <h2 class="section-title">Our Clinic Gallery</h2>
-                <p class="gallery-description">Take a glimpse inside our authentic Ayurvedic clinic and treatment facilities</p>
-                <div class="gallery-grid">
-                    <div class="gallery-item">
-                        <img src="images/AYURPIC1.jpg" alt="AAYURCURE Clinic Interior" class="gallery-img">
-                        <div class="gallery-overlay">
-                            <h4>Clinic Interior</h4>
-                        </div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="images/AYURPIC2.jpg" alt="Ayurvedic Treatment Room" class="gallery-img">
-                        <div class="gallery-overlay">
-                            <h4>Treatment Room</h4>
-                        </div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="images/AYURPIC3.jpg" alt="Traditional Ayurvedic Massage Therapy" class="gallery-img">
-                        <div class="gallery-overlay">
-                            <h4>Massage Therapy</h4>
-                        </div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="images/AYURPIC4.jpg" alt="Panchkarma Treatment Setup" class="gallery-img">
-                        <div class="gallery-overlay">
-                            <h4>Panchkarma Setup</h4>
-                        </div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="images/AYURPIC5.jpg" alt="Ayurvedic Wellness Facility" class="gallery-img">
-                        <div class="gallery-overlay">
-                            <h4>Wellness Facility</h4>
-                        </div>
                     </div>
                 </div>
             </div>
